--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "me.amitshekhar.daggerhilt"
+        applicationId "me.bhavenshah.daggerhilt"
         minSdk 21
         targetSdk 33
         versionCode 1
