--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="me.amitshekhar.daggerhilt">
+    package="me.bhavenshah.daggerhilt">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="me.amitshekhar.daggerhilt.NewsApplication"
+        android:name="me.bhavenshah.daggerhilt.NewsApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.DaggerHilt"
         tools:targetApi="31">
         <activity
-            android:name="me.amitshekhar.daggerhilt.ui.topheadline.TopHeadlineActivity"
+            android:name="me.bhavenshah.daggerhilt.ui.topheadline.TopHeadlineActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
